--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-03  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-02-03  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation by Mark Krapviner.
