--- a/po/si.po
+++ b/po/si.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Danishka Navin <snavin@redhat.com>, 2007.
+# Danishka Navin <danishka@gmail.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: si\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-16 03:36+0100\n"
-"PO-Revision-Date: 2007-10-04 14:47+0530\n"
-"Last-Translator: Danishka Navin <snavin@redhat.com>\n"
+"PO-Revision-Date: 2008-02-04 12:43+0530\n"
+"Last-Translator: Danishka Navin <danishka@gmail.com>\n"
 "Language-Team: Sinhala <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -969,7 +970,7 @@ msgstr "ගොනුවේ අවසර."
 
 #: ../libnautilus-private/nautilus-column-utilities.c:105
 msgid "Octal Permissions"
-msgstr ""
+msgstr "අටේපාදයෙන් අවසර"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:106
 msgid "The permissions of the file, in octal notation."
@@ -985,7 +986,7 @@ msgstr "ගොනුවෙ mime වර්‍ගය."
 
 #: ../libnautilus-private/nautilus-column-utilities.c:120
 msgid "SELinux Context"
-msgstr ""
+msgstr "SELinux සංදර්භය"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:121
 msgid "The SELinux security context of the file."
@@ -4493,11 +4494,11 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:44
 msgid "Choose the order of information to appear in the list view."
-msgstr ""
+msgstr "ලැයිස්තු දසුන තුළ තොරතුරු දිස් විය යුතු පිළිවෙළ තෝරන්න."
 
 #: ../src/nautilus-file-management-properties.glade.h:45
 msgid "Count _number of items:"
-msgstr ""
+msgstr "අයිකන ගණන ගණන් කරන්න (_n):"
 
 #: ../src/nautilus-file-management-properties.glade.h:46
 msgid "Default _zoom level:"
@@ -4513,7 +4514,7 @@ msgstr "ගොනු කළමණාරන අභිප්‍රේත"
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid "I_nclude a Delete command that bypasses Trash"
-msgstr ""
+msgstr "ඉවතලන බහලුම මගහරින මැකීමේ විධානය ඇතුළත්ව (_n)"
 
 #: ../src/nautilus-file-management-properties.glade.h:50
 msgid ""
@@ -4541,15 +4542,15 @@ msgstr "බහලුම් පමණක් පෙන්වන්න (_o)"
 
 #: ../src/nautilus-file-management-properties.glade.h:56
 msgid "Show _thumbnails:"
-msgstr ""
+msgstr "සිගිති රූ දර්ශනය (_t):"
 
 #: ../src/nautilus-file-management-properties.glade.h:57
 msgid "Show hidden and _backup files"
-msgstr ""
+msgstr "සැගවුනු සහ සංරක්ෂිත ගොනු පෙන්වන්න (_b)"
 
 #: ../src/nautilus-file-management-properties.glade.h:58
 msgid "Show te_xt in icons:"
-msgstr ""
+msgstr "අයිකන තුළ පෙළ දර්ශනය (_x):"
 
 #: ../src/nautilus-file-management-properties.glade.h:59
 msgid "Sort _folders before files"
@@ -4573,7 +4574,7 @@ msgstr "පෙරනිමි විශාලණ මට්ටම (_D):"
 
 #: ../src/nautilus-file-management-properties.glade.h:65
 msgid "_Double click to activate items"
-msgstr "අයිතම සක්‍රීය කිරීම සඳහා දෙවරක් ක්ලික් කරන්න"
+msgstr "අයිතම සක්‍රීය කිරීම සඳහා දෙවරක් ක්ලික් කරන්න (_D)"
 
 #: ../src/nautilus-file-management-properties.glade.h:66
 msgid "_Format:"
@@ -4581,27 +4582,27 @@ msgstr "සංයුතිය (_F):"
 
 #: ../src/nautilus-file-management-properties.glade.h:67
 msgid "_Only for files smaller than:"
-msgstr ""
+msgstr "උපරිම විශාලත්ව සීමාව (_O):"
 
 #: ../src/nautilus-file-management-properties.glade.h:68
 msgid "_Run executable text files when they are clicked"
-msgstr ""
+msgstr "ක්‍රියාත්මක කළ හැකි පෙළ ගොනු ක්ලික් කළවිට ක්‍රියාත්මක කරන්න (_R)"
 
 #: ../src/nautilus-file-management-properties.glade.h:69
 msgid "_Single click to activate items"
-msgstr ""
+msgstr "අයිකන සක්‍රීය කිරීමට වරක් ක්ලික් කිරීම (_S)"
 
 #: ../src/nautilus-file-management-properties.glade.h:70
 msgid "_Text beside icons"
-msgstr ""
+msgstr "අයිකන අසලින් පෙළ (_T)"
 
 #: ../src/nautilus-file-management-properties.glade.h:71
 msgid "_Use compact layout"
-msgstr ""
+msgstr "සංයුක්ත පසුබිම භාවිතා කර්නන (_U)"
 
 #: ../src/nautilus-file-management-properties.glade.h:72
 msgid "_View executable text files when they are clicked"
-msgstr ""
+msgstr "ක්‍රියාත්යාත්මක කළ හැකි පෙළ ගොනු මත ක්ලික් විට දර්ශනය කරන්න (_v"
 
 #: ../src/nautilus-first-time-druid.c:40
 msgid ""
@@ -5390,7 +5391,7 @@ msgstr ""
 
 #: ../src/nautilus-window-manage-views.c:655
 msgid "You can choose another view or go to a different location."
-msgstr ""
+msgstr "ඔබට වෙනත් දසුනක් තේරිය හැක හෝ වෙනත් වෙනස් පිහිටුමකට යා හැක."
 
 #: ../src/nautilus-window-manage-views.c:668
 msgid "The location cannot be displayed with this viewer."
