--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-04  Danishka Navin  <danishka@gmail.com>
+
+	* si.po: Updated Sinhala translation.
+
 2008-02-03  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
