Updated Occitan translation
svn path=/trunk/; revision=13690

--- a/po/oc.po
+++ b/po/oc.po
@@ -851,7 +851,7 @@ msgstr "Visualizar la barra d'emplaçament dins las fenèstras novèlas"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid "Show mounted volumes on the desktop"
-msgstr "Visualizar los volums mostrats sul burèu"
+msgstr "Visualizar los volums montats sul burèu"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:92
 msgid "Show side pane in new windows"
@@ -5310,7 +5310,7 @@ msgstr "_Fenèstra novèla"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:476
 msgid "Open another Nautilus window for the displayed location"
-msgstr "Dobrir una novèla fenèstra de Nautilus pel emplaçament visualizat"
+msgstr "Dobrir una novèla fenèstra de Nautilus per l'emplaçament visualizat"
 
 #: ../src/nautilus-navigation-window-menus.c:478
 msgid "Open Folder W_indow"
