Default to move when dragging from trash.
2008-02-04  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-dnd.c ()
	(nautilus_drag_default_drop_action_for_icons):
	Default to move when dragging from trash.


svn path=/trunk/; revision=13692

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-02-04  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-dnd.c ()
+	(nautilus_drag_default_drop_action_for_icons):
+	Default to move when dragging from trash.
+
+2008-02-04  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-properties-window.c (create_permissions_page):
 	Only show selinux context if HAVE_SELINUX.
 	
