Don't autorun non-local mounts.
2008-02-04  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-autorun.c:
	Don't autorun non-local mounts.


svn path=/trunk/; revision=13694

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-02-04  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-autorun.c:
+	Don't autorun non-local mounts.
+
+2008-02-04  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-dnd.c ()
 	(nautilus_drag_default_drop_action_for_icons):
 	Default to move when dragging from trash.
