Escape characters that won't work in GMarkup.
2008-02-05  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c (custom_basename_to_string):
	Escape characters that won't work in GMarkup.


svn path=/trunk/; revision=13695

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-05  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c (custom_basename_to_string):
+	Escape characters that won't work in GMarkup.
+
 2008-02-04  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-autorun.c:
