updated hebrew translation
svn path=/trunk/; revision=13696

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-05  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation by Mark Krapviner.
+
 2008-02-04  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
