--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-06  Alexander Larsson  <alexl@redhat.com>
+
+        * it.po:
+	Fix mistranslation (#510308)
+
 2008-02-05  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation by Mark Krapviner.
