--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-07  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-icon-dnd.c:
+	Rewrite the desktop uri to the real uri on
+	uri-list drops (i.e. from other apps) (#511764)
+
 2008-02-06  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-utilities.c (nautilus_find_file_insensitive_next):
