libbackground is now using LIBBACKGROUND_{CFLAGS,...}, unbreak the build.
2008-02-07  Luca Ferretti  <elle.uca@libero.it>

	* configure.in:
	libbackground is now using LIBBACKGROUND_{CFLAGS,...}, unbreak
	the build.


svn path=/trunk/; revision=13705

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-07  Luca Ferretti  <elle.uca@libero.it>
+
+	* configure.in:
+	libbackground is now using LIBBACKGROUND_{CFLAGS,...}, unbreak
+	the build.
+
 2008-02-07  A. Walton <awalton@svn.gnome.org>
 	* configure.in:
 	* libnautilus-private/nautilus-emblem-utils.c:
