--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-07  Artur Flinta  <aflinta@svn.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2008-02-07  Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation.
