Updated Spanish translation
svn path=/trunk/; revision=13707

--- a/po/es.po
+++ b/po/es.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-29 10:38+0000\n"
-"PO-Revision-Date: 2008-01-29 13:23+0100\n"
+"POT-Creation-Date: 2008-01-29 13:03+0000\n"
+"PO-Revision-Date: 2008-02-08 01:38+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1888,15 +1888,15 @@ msgstr "Borrando archivos"
 #, c-format
 msgid "%'d file left to delete"
 msgid_plural "%'d files left to delete"
-msgstr[0] "%'d archivo restante por borrar"
-msgstr[1] "%'d archivos restantes por borrar"
+msgstr[0] "queda %'d archivo por borrar"
+msgstr[1] "quedan %'d archivos por borrar"
 
 #. To translators: %T will expand to a time like "2 minutes"
 #: ../libnautilus-private/nautilus-file-operations.c:1174
 msgid "%'d file left to delete — %T left"
 msgid_plural "%'d files left to delete — %T left"
-msgstr[0] "%'d archivo restante por borrar — %T restante"
-msgstr[1] "%'d archivos restantes por borrar — %T restante"
+msgstr[0] "queda %'d archivo por borrar — quedan %T"
+msgstr[1] "quedan %'d archivos por borrar — quedan %T"
 
 # src/file-manager/dfos-xfer.c:745
 #: ../libnautilus-private/nautilus-file-operations.c:1235
@@ -1962,8 +1962,8 @@ msgstr "Moviendo archivos a la papelera"
 #, c-format
 msgid "%'d file left to trash"
 msgid_plural "%'d files left to trash"
-msgstr[0] "%'d archivo restante por mover a la papelera"
-msgstr[1] "%'d archivos restantes por mover a la papelera"
+msgstr[0] "queda %'d archivo por mover a la papelera"
+msgstr[1] "quedan %'d archivos por mover a la papelera"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1516
 msgid "Cannot move file to trash, do you want to delete immediately?"
