--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-08  Alexander Larsson  <alexl@redhat.com>
+
+        * test/test-nautilus-search-engine.c:
+        (main):
+	Initialize threads (#515031)
+
 2008-02-07  Luca Ferretti  <elle.uca@libero.it>
 
 	* configure.in:
