Make sure delete-from-trash is correctly sensitive. (#514039)
2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
	Make sure delete-from-trash is correctly sensitive.
	(#514039)


svn path=/trunk/; revision=13709

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-02-08  Alexander Larsson  <alexl@redhat.com>
 
+        * src/file-manager/fm-directory-view.c:
+	Make sure delete-from-trash is correctly sensitive.
+	(#514039)
+
+2008-02-08  Alexander Larsson  <alexl@redhat.com>
+
         * test/test-nautilus-search-engine.c:
         (main):
 	Initialize threads (#515031)
