Fix open and open with menu display in always-use-browser mode.
2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
	Fix open and open with menu display in
	always-use-browser mode.


svn path=/trunk/; revision=13710

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2008-02-08  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-directory-view.c:
+	Fix open and open with menu display in
+	always-use-browser mode.
+	
+2008-02-08  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-directory-view.c:
 	Make sure delete-from-trash is correctly sensitive.
 	(#514039)
 
