Handle changes of GMount objects
2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-link.c:
        (mount_changed_callback):
        (nautilus_desktop_link_new_from_mount):
	Handle changes of GMount objects


svn path=/trunk/; revision=13711

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-02-08  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-desktop-link.c:
+        (mount_changed_callback):
+        (nautilus_desktop_link_new_from_mount):
+	Handle changes of GMount objects
+
+2008-02-08  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-directory-view.c:
 	Fix open and open with menu display in
 	always-use-browser mode.
