Change CVS things into SVN.
	* HACKING: Change CVS things into SVN.


svn path=/trunk/; revision=13712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-08  Olav Vitters  <olav@bkor.dhs.org>
+
+	* HACKING: Change CVS things into SVN.
+
 2008-02-08  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-desktop-link.c:
