Maks sure we disconnect from the changed signal on the mount.
2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-link.c:
	Maks sure we disconnect from the changed
	signal on the mount.


svn path=/trunk/; revision=13713

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-08  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-desktop-link.c:
+	Maks sure we disconnect from the changed
+	signal on the mount.
+
 2008-02-08  Olav Vitters  <olav@bkor.dhs.org>
 
 	* HACKING: Change CVS things into SVN.
