--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-02-08  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-autorun.c:
+	C89 fix. (#515093)
+
+2008-02-08  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-application.c:
 	Use the new g_volume_should_automount()
 
