new uzbek cyrillic translation
svn path=/branches/gnome-2-20/; revision=13719

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-09  Nurali Abdurahmonov <mavnur@gmail.com>
+
+	* uz@cyrillic.po: added ubek cyrillic translation
+	* LINUGUAS: added uz@cyrillic 
+
 2008-01-19  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Fixed wrong translations.
