Updated Russian translation.
2008-02-10  Vasiliy Faronov  <qvvx@yandex.ru>

        * ru.po: Updated Russian translation.



svn path=/trunk/; revision=13722

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-10  Vasiliy Faronov  <qvvx@yandex.ru>
+
+        * ru.po: Updated Russian translation.
+
 2008-02-10  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
