Fix leak of volumes list. Pointed out by Vincent Untz
2008-02-11  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-places-sidebar.c (update_places):
	Fix leak of volumes list.
	Pointed out by Vincent Untz



svn path=/trunk/; revision=13723

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-11  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-places-sidebar.c (update_places):
+	Fix leak of volumes list.
+	Pointed out by Vincent Untz
+
 2008-02-08  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-autorun.c:
