Update for new gio mount flags argument
2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-mime-actions.c:
        * libnautilus-private/nautilus-vfs-file.c:
        * src/nautilus-application.c:
        * src/nautilus-window-manage-views.c:
	Update for new gio mount flags argument


svn path=/trunk/; revision=13724

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-02-11  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-mime-actions.c:
+        * libnautilus-private/nautilus-vfs-file.c:
+        * src/nautilus-application.c:
+        * src/nautilus-window-manage-views.c:
+	Update for new gio mount flags argument
+
+2008-02-11  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-places-sidebar.c (update_places):
 	Fix leak of volumes list.
 	Pointed out by Vincent Untz
