--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-02-11  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-progress-info.[ch]:
+        * libnautilus-private/nautilus-file-operations.c:
+	Make progress setting be ratio based and not
+	percent based and then ensure we handle division
+	by zero correctly in all cases.
+
+2008-02-11  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.c:
         * libnautilus-private/nautilus-mime-actions.c:
         * libnautilus-private/nautilus-vfs-file.c:
