Updated Galician Translation.
svn path=/trunk/; revision=13726

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2008-02-10  Vasiliy Faronov  <qvvx@yandex.ru>
 
         * ru.po: Updated Russian translation.
