--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-02-11  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Require glib 2.15.5
+
+	* NEWS:
+	Update for release
+
+2008-02-11  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-progress-info.[ch]:
         * libnautilus-private/nautilus-file-operations.c:
 	Make progress setting be ratio based and not
