--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2008-02-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post-release version bump
+
+=== nautilus 2.21.91 ===
+
+2008-02-11  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Require glib 2.15.5
 
 	* NEWS:
