Fix 64bit build (#515896)
2008-02-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.c:
        (mime_application_hash):
	Fix 64bit build (#515896)


svn path=/trunk/; revision=13730

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-12  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-mime-actions.c:
+        (mime_application_hash):
+	Fix 64bit build (#515896)
+
 2008-02-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
