Don't free NULL GError.
2008-02-13  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c (verify_destination):
	Don't free NULL GError.


svn path=/trunk/; revision=13732

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-13  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c (verify_destination):
+	Don't free NULL GError.
+
 2008-02-12  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c:
