Updated Occitan translation
svn path=/trunk/; revision=13733

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-13  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+
 === nautilus 2.21.91 ===
 
 2008-02-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
