Updated Italian translation.
2008-02-13  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.


svn path=/trunk/; revision=13735

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-13  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-02-13  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
