--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-02-13  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-icon-canvas-item.[ch]:
+        * libnautilus-private/nautilus-icon-dnd.c:
+	Support alpha icons during DnD on composited screens. (#500084)
+	Patch from Alexander "weej" Jones
+
+2008-02-13  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-link.c:
         (nautilus_link_get_link_icon_from_desktop):
 	Strip extension from non-absolute-filename icons.
