If using composite, make dnd icons partially transparent.
2008-02-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-dnd.c:
	If using composite, make dnd icons partially transparent.
	


svn path=/trunk/; revision=13739

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-02-13  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-icon-dnd.c:
+	If using composite, make dnd icons partially transparent.
+	
+2008-02-13  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-icon-canvas-item.[ch]:
         * libnautilus-private/nautilus-icon-dnd.c:
 	Support alpha icons during DnD on composited screens. (#500084)
