Updated Brazilian Portuguese translation by Vladimir Melo and Pedro de
2008-02-13  Jonh Wendell <jwendell@gnome.org>

	* pt_BR.po: Updated Brazilian Portuguese translation by Vladimir Melo
	and Pedro de Medeiros.

svn path=/trunk/; revision=13740

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-13  Jonh Wendell <jwendell@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation by Vladimir Melo
+	and Pedro de Medeiros.
+
 2008-02-13  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
