Allow minimize of progress window (#512778) Patch from Cosimo Cecchi
2008-02-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.c:
	Allow minimize of progress window (#512778)
	Patch from Cosimo Cecchi



svn path=/trunk/; revision=13742

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-02-13  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-progress-info.c:
+	Allow minimize of progress window (#512778)
+	Patch from Cosimo Cecchi
+
+2008-02-13  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-progress-info.[ch]:
         * libnautilus-private/nautilus-file-operations.c:
 	Add paused status to progress infos and use it
