--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-02-13  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-bookmark.c (nautilus_bookmark_compare_with):
+	Fix bookmark comparison (#516214)
+	Patch from Cosimo Cecchi
+
+2008-02-13  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-progress-info.c:
 	Allow minimize of progress window (#512778)
 	Patch from Cosimo Cecchi
