--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-02-13  Alexander Larsson  <alexl@redhat.com>
 
+        * configure.in:
+	Handle beagle >= 0.3.0
+
+2008-02-13  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-bookmark.c (nautilus_bookmark_compare_with):
 	Fix bookmark comparison (#516214)
 	Patch from Cosimo Cecchi
