Arangel Angov <arangel@linux.net.mk> * mk.po: Updated Macedonian translation
svn path=/trunk/; revision=13745

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-14  Arangel Angov <arangel@linux.net.mk>
+
+	* mk.po: Updated Macedonian Translation.
+
 2008-02-13  Jonh Wendell <jwendell@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation by Vladimir Melo
