--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-14  Ilkka Tuohela <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2008-02-14  Arangel Angov <arangel@linux.net.mk>
 
 	* mk.po: Updated Macedonian Translation.
