ask before emptying the trash or deleting files (#509877) Patch from
2008-02-14  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	ask before emptying the trash or deleting files (#509877)
	Patch from Cosimo Cecchi and Luca Ferretti


svn path=/trunk/; revision=13750

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-02-14  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+	ask before emptying the trash or deleting files (#509877)
+	Patch from Cosimo Cecchi and Luca Ferretti
+
+2008-02-14  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-properties-window.[ch]:
 	Close properties dialog on escape (#515620)
 	Patch from Cosimo Cecchi
