--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-14  Runa Bhattacharjee <runabh@gmail.com>
+
+	* kn.po: Updated Translation for Kannada by Shankar Prasad
+
 2008-02-14  Pawan Chitrakar <chautari@gmail.com>
 
 	* ne.po: Updated Nepali Translation.
